pagina terminada con html y css

--- a/comida.css
+++ b/comida.css
@@ -12,3 +12,20 @@ h1{
     color: white;
     font-size: 2em;
 }
+
+.imagen{
+    border: solid 10;
+    border-color: aliceblue
+
+}
+
+#comida{
+    width: 60em;
+
+}
+
+#comida2{
+    width: 30em;
+
+}
+
